--- a/Resources/views/metronic/modules/table_advanced.html.twig
+++ b/Resources/views/metronic/modules/table_advanced.html.twig
@@ -43,7 +43,7 @@
                 {#</ul>#}
             {#</div>#}
         </div>
-        <table class="table table-striped table-bordered table-hover" id="{% block table_id %}">
+        <table class="table table-striped table-bordered table-hover" id="{% block table_id %}{% endblock %}">
             <thead>
                 <tr>
                     {% block table_headers %}{% endblock %}
