table_id en toggler

--- a/Resources/views/metronic/modules/table_advanced.html.twig
+++ b/Resources/views/metronic/modules/table_advanced.html.twig
@@ -11,7 +11,7 @@
                 <a class="btn default" href="#" data-toggle="dropdown">
                     Columns <i class="fa fa-angle-down"></i>
                 </a>
-                <div id="sample_4_column_toggler" class="dropdown-menu hold-on-click dropdown-checkboxes pull-right">
+                <div id="{% block table_id %}{% endblock %}_column_toggler" class="dropdown-menu hold-on-click dropdown-checkboxes pull-right">
                     {% block columns_filter %}{% endblock %}
                 </div>
             </div>
