TODOs on english

--- a/Resources/views/metronic/modules/form_row_separated.html.twig
+++ b/Resources/views/metronic/modules/form_row_separated.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Modules/form_row_separated.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <div class="portlet box {% block portlet_header_color %}{% endblock %}">
     <div class="portlet-title">
         <div class="caption">
