--- a/Resources/views/metronic/modules/table_advanced.html.twig
+++ b/Resources/views/metronic/modules/table_advanced.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Modules/table_Advanced.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <!-- BEGIN EXAMPLE TABLE PORTLET-->
 <div class="portlet box {% block portlet_header_color %}{% endblock %}">
     <div class="portlet-title">
