--- a/Resources/views/metronic/pieces/content/style_customizer.html.twig
+++ b/Resources/views/metronic/pieces/content/style_customizer.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/pieces/content/style_customizer.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <div class="theme-panel hidden-xs hidden-sm">
     <div class="toggler">
     </div>
