--- a/Resources/views/metronic/pieces/header/notification_dropdown.html.twig
+++ b/Resources/views/metronic/pieces/header/notification_dropdown.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Header/notification_dropdown.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <li class="dropdown dropdown-extended dropdown-notification" id="header_notification_bar">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
         <i class="fa fa-warning"></i>
