--- a/Resources/views/metronic/pieces/header/responsive_menu_toggler.html.twig
+++ b/Resources/views/metronic/pieces/header/responsive_menu_toggler.html.twig
@@ -1,4 +1,4 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Header/responsive_menu_toggler.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <div class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse">
 </div>
