--- a/Resources/views/metronic/pieces/header/todo_dropdown.html.twig
+++ b/Resources/views/metronic/pieces/header/todo_dropdown.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Header/todo_dropdown.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <li class="dropdown dropdown-extended dropdown-tasks" id="header_task_bar">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
         <i class="fa fa-tasks"></i>
