--- a/Resources/views/metronic/pieces/login/forgot_password_form.html.twig
+++ b/Resources/views/metronic/pieces/login/forgot_password_form.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Login/forgot_password_form.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <form class="forget-form" action="index.html" method="post">
     <h3>Forget Password ?</h3>
     <p>
