--- a/Resources/views/metronic/pieces/login/login_form.html.twig
+++ b/Resources/views/metronic/pieces/login/login_form.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Login/login_form.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <form class="login-form" action="{% block form_action %}{% endblock %}" method="post">
 
     {% block csrf_token %}{% endblock %}
