--- a/Resources/views/metronic/pieces/login/registration_form.html.twig
+++ b/Resources/views/metronic/pieces/login/registration_form.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Login/registration_form.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <form class="register-form" action="index.html" method="post">
     <h3>Sign Up</h3>
     <p>
