--- a/Resources/views/metronic/pieces/page_header/actions_dropdown.html.twig
+++ b/Resources/views/metronic/pieces/page_header/actions_dropdown.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/PageHeader/actions_dropdown.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <li class="btn-group">
     <button type="button" class="btn blue dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000" data-close-others="true">
         <span>Actions</span><i class="fa fa-angle-down"></i>
