--- a/Resources/views/metronic/pieces/page_header/page_breadcrumb.html.twig
+++ b/Resources/views/metronic/pieces/page_header/page_breadcrumb.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/PageHeader/page_breadcrumb.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <li>
     <i class="fa fa-home"></i>
     <a href="{{ path('admin_home') }}">Home</a>
