--- a/Resources/views/metronic/pieces/page_header/page_datepicker.html.twig
+++ b/Resources/views/metronic/pieces/page_header/page_datepicker.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/PageHeader/page_datepicker.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <li class="pull-right">
     <div id="dashboard-report-range" class="dashboard-date-range tooltips" data-placement="top" data-original-title="Change dashboard date range">
         <i class="fa fa-calendar"></i>
