--- a/Resources/views/metronic/pieces/sidebar/sidebar_search.html.twig
+++ b/Resources/views/metronic/pieces/sidebar/sidebar_search.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/Pieces/Sidebar/sidebar_search.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <!-- DOC: To remove the search box from the sidebar you just need to completely remove the below "sidebar-search-wrapper" LI element -->
 <li class="sidebar-search-wrapper">
     <!-- BEGIN RESPONSIVE QUICK SEARCH FORM -->
