--- a/Resources/views/metronic/pieces/content/sample_portlet_configuration.html.twig
+++ b/Resources/views/metronic/pieces/content/sample_portlet_configuration.html.twig
@@ -1,5 +1,5 @@
 {# src/Ruudy/MetronicBundle/Resources/views/metronic/pieces/content/sample_portlet_configuration.html.twig #}
-{#{{ TODO establecer bloques }}#}
+{#{{ TODO make it blocks }}#}
 <div class="modal fade" id="portlet-config" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
