--- a/Resources/views/metronic/zones/admin/sidebar.html.twig
+++ b/Resources/views/metronic/zones/admin/sidebar.html.twig
@@ -3,6 +3,9 @@
 <div class="page-sidebar-wrapper">
     <!-- DOC: Set data-auto-scroll="false" to disable the sidebar from auto scrolling/focusing -->
     <!-- DOC: Change data-auto-speed="200" to adjust the sub menu slide up/down speed -->
+
+    {% set route = app.request.attributes.get('_route') %}
+
     <div class="page-sidebar navbar-collapse collapse">
         <!-- BEGIN SIDEBAR MENU -->
         <ul class="page-sidebar-menu" data-auto-scroll="false" data-auto-speed="200">
